ajustes no ranking e nos palpites